// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should display ExpensesSummary correctly with expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
    <span>
       expenses 
    </span>
    totalling 
    $1.50
  </h1>
</div>
`;

exports[`Should display ExpensesSummary correctly with no expenses 1`] = `
<div>
  <h1>
    Viewing 
    <span>
       expenses 
    </span>
    totalling 
    $0.00
  </h1>
</div>
`;
